@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<tool-setup>
+ <required tool_id="facultystaffdirectory_tool"
+           class="Products.FacultyStaffDirectory.tools.FacultyStaffDirectoryTool.FacultyStaffDirectoryTool" />
+</tool-setup>
